<resources>
    <string name="app_name">VT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="autentificare">Autentificare</string>
    <string name="nume_de_utilizator">Nume de utilizator</string>
    <string name="parola">Parola</string>
    <string name="nume_utilizator">Nume utilizator</string>
    <string name="logo">Logo</string>
    <string name="stetoscop">TODO</string>
    <string name="programari">programari</string>
    <string name="recomandari">recomandari</string>
    <string name="masurare_date">masurare_date</string>
    <string name="recomandari_medicale">Recomandari medicale</string>
    <string name="programarile_medicale">Programarile medicale</string>
    <string name="pornire">Pornire</string>
    <string name="oprire">Oprire</string>
    <string name="afisare_puls">afisare_puls</string>
    <string name="afisare_temperatura">afisare_temperatura</string>
    <string name="afisare_umiditate">afisare_umiditate</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">BACK</string>
</resources>