<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/programari_"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:contentDescription="@string/programari"/>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="155dp"
        android:background="@drawable/recomandari"
        android:contentDescription="@string/recomandari"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="151dp"
        android:background="@drawable/masurare_date"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        android:contentDescription="@string/masurare_date" />

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/text_box"
        android:gravity="center"
        android:padding="20dp"
        android:text="LOG OUT"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,VisualLintOverlap" />
</androidx.constraintlayout.widget.ConstraintLayout>